# NSU-OOP-CPP

./: .gitignore
lab1/: CMakeLists.txt  class.cpp  class.h  class_test.cpp  flat_map_class.cpp  flat_map_class.h  flat_map_class_test.cpp  main.cpp  task1.cpp  task1.h  task1_test.cpp
lab2/: CMakeLists.txt
lab3/: Bullet.cpp  CMakeLists.txt  Canvas.cpp  Canvas.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h  main.cpp
lab3/files/: leaderboard.ld
lab3/files/levels/: level1.mp  level2.mp  level3.mp  level4.mp
lab3/include/: Box.h  Bullet.h  Colors.h  Door.h  Enemy.h  Engine.h  Floor.h  GameContext.h  GameObject.h  Globals.h  Player.h  Tile.h  UploadLvls.h
lab3/levels/: level1.mp  level2.mp  level3.mp  level4.mp
lab3/source/Engine/: Engine.cpp  GameContext.cpp  GameObject.cpp  UploadLvls.cpp
lab3/source/Entities/: Door.cpp  Enemy.cpp  Player.cpp
lab3/source/Textures/: Tile.cpp
lab3/src/: Bullet.cpp  Canvas.cpp  Enemy.cpp  Player.cpp
lab3/src/Engine/: Draw.cpp  Engine.cpp  Globals.cpp  Input.cpp  Update.cpp
lab3/src/Entities/: Player.cpp
lab3/src/Textures/: Box.cpp  Floor.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: MyTuple.h
lab4/lab4_1/: CMakeLists.txt  main.cpp
lab4/lab4_1/include/: MyTuple.h
lab4/lab4_2/: CMakeLists.txt  CSVParses.h  error_file1.csv  error_file2.docx  file1.csv  file2.csv  main.cpp
lab4/lab4_3/: CMakeLists.txt  main.cpp  template_flatMap.h
